added tos, model, request and response for search results

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
         <item>taxi_stand</item>
         <item>university</item>
     </string-array>
+    <string name="API_KEY">AIzaSyBiO_7JW2S1Z9tjxuDvO9rcjQw0EzsbdUE</string>
 </resources>
