changes to display search list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,6 @@
         <item>university</item>
     </string-array>
     <string name="API_KEY">AIzaSyBiO_7JW2S1Z9tjxuDvO9rcjQw0EzsbdUE</string>
+    <string name="network_error">There is no internet connection on device, please check connection and try again.</string>
+    <string name="zero_search_result">Sorry there is no result found for this category.</string>
 </resources>
