--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="network_error">There is no internet connection on device, please check connection and try again.</string>
     <string name="zero_search_result">Sorry there is no result found for this category.</string>
     <string name="error_location_off_no_saved_location">No location data found, please try again with location on.</string>
+    <string name="error_location_permission_denied">Location permission is denied</string>
 </resources>
