--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,9 +63,15 @@
         <item>taxi_stand</item>
         <item>university</item>
     </string-array>
-    <string name="API_KEY">AIzaSyC2QWpAny5vmZvYvh8--YSlNyWT1u--BnA</string>
+    <string name="PLACES_API_KEY">AIzaSyC2QWpAny5vmZvYvh8--YSlNyWT1u--BnA</string>
     <string name="network_error">There is no internet connection on device, please check connection and try again.</string>
     <string name="zero_search_result">Sorry there is no result found for this category.</string>
     <string name="error_location_off_no_saved_location">No location data found, please try again with location on.</string>
     <string name="error_location_permission_denied">Location permission is denied</string>
+    <string name="error_detail_result">Sorry there is no detail available for this place.</string>
+    <string name="open_now">OPEN</string>
+    <string name="close_now">CLOSE</string>
+    <string name="open_at">Open At : </string>
+    <string name="close_at">Close At : </string>
+    <string name="MAPS_API_KEY">AIzaSyAGewuJ4Z_jlXpnfx6LVg0rt7_VVv8qshU</string>
 </resources>
