added rate us and share me functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,6 @@
         <item>Rate App</item>
         <item>Exit</item>
     </string-array>
+    <string name="share_msg" formatted="true">Install this cool application: https://play.google.com/store/apps/details?id=%1s</string>
+    <string name="no_sharing_app">No application to support sharing functionality.</string>
 </resources>
