issue fix to open google photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="no_sharing_app">No application to support sharing functionality.</string>
     <string name="no_favorite">No favorite place or category found.</string>
     <string name="no_application_error">No application found to handle this action.</string>
+    <string name="adding_favorite_error">Can not add place to favorite</string>
     <string name="reviews">Reviews</string>
     <string name="shared_transition_name_from_list_to_detail">titleTransition</string>
     <string name="shared_transition_name_from_category_to_list">gridTransition</string>
