--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
         <item>taxi_stand</item>
         <item>university</item>
     </string-array>
-    <string name="PLACES_API_KEY">AIzaSyC2QWpAny5vmZvYvh8--YSlNyWT1u--BnA</string>
+    <!--<string name="PLACES_API_KEY">AIzaSyC2QWpAny5vmZvYvh8&#45;&#45;YSlNyWT1u&#45;&#45;BnA</string>-->
     <string name="network_error">There is no internet connection on device, please check connection and try again.</string>
     <string name="zero_search_result">Sorry there is no result found for this category.</string>
     <string name="error_location_off_no_saved_location">No location data found, please try again with location on.</string>
